# rust_tutorials

./: Cargo.toml  Rocket.toml
src/: main.rs  tera.rs
templates/: error.html.tera  index.html.tera
templates/list/: create.html.tera  delete.html.tera  items.html.tera  read.html.tera  update.html.tera
