[package]
name = "base_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"

# in your application, you should enable only the template engine(s) used
[dependencies.rocket_dyn_templates]
features = ["tera"]